@@ -1,5 +1,5 @@
 /*
- * Copyright 2022-2023 the original author or authors.
+ * Copyright 2022-2024 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,19 +18,24 @@ package org.springframework.boot.build.architecture;
 
 import java.io.File;
 import java.io.IOException;
+import java.net.URLDecoder;
+import java.net.URLEncoder;
 import java.nio.file.Files;
 import java.nio.file.StandardOpenOption;
 import java.util.List;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import com.tngtech.archunit.base.DescribedPredicate;
+import com.tngtech.archunit.core.domain.JavaCall;
 import com.tngtech.archunit.core.domain.JavaClass;
 import com.tngtech.archunit.core.domain.JavaClass.Predicates;
 import com.tngtech.archunit.core.domain.JavaClasses;
 import com.tngtech.archunit.core.domain.JavaMethod;
 import com.tngtech.archunit.core.domain.JavaParameter;
 import com.tngtech.archunit.core.domain.properties.CanBeAnnotated;
+import com.tngtech.archunit.core.domain.properties.HasName;
+import com.tngtech.archunit.core.domain.properties.HasOwner.Predicates.With;
+import com.tngtech.archunit.core.domain.properties.HasParameterTypes;
 import com.tngtech.archunit.core.importer.ClassFileImporter;
 import com.tngtech.archunit.lang.ArchCondition;
 import com.tngtech.archunit.lang.ArchRule;
@@ -45,19 +50,26 @@ import org.gradle.api.Task;
 import org.gradle.api.file.DirectoryProperty;
 import org.gradle.api.file.FileCollection;
 import org.gradle.api.file.FileTree;
+import org.gradle.api.provider.ListProperty;
 import org.gradle.api.tasks.IgnoreEmptyDirectories;
+import org.gradle.api.tasks.Input;
 import org.gradle.api.tasks.InputFiles;
 import org.gradle.api.tasks.Internal;
+import org.gradle.api.tasks.Optional;
 import org.gradle.api.tasks.OutputDirectory;
 import org.gradle.api.tasks.PathSensitive;
 import org.gradle.api.tasks.PathSensitivity;
 import org.gradle.api.tasks.SkipWhenEmpty;
 import org.gradle.api.tasks.TaskAction;
 
+import org.springframework.util.ResourceUtils;
+
 /**
  * {@link Task} that checks for architecture problems.
  *
  * @author Andy Wilkinson
+ * @author Yanming Zhou
+ * @author Scott Frederick
  */
 public abstract class ArchitectureCheck extends DefaultTask {
 
@@ -65,24 +77,31 @@ public abstract class ArchitectureCheck extends DefaultTask {
 
 	public ArchitectureCheck() {
 		getOutputDirectory().convention(getProject().getLayout().getBuildDirectory().dir(getName()));
+		getRules().addAll(allPackagesShouldBeFreeOfTangles(),
+				allBeanPostProcessorBeanMethodsShouldBeStaticAndHaveParametersThatWillNotCausePrematureInitialization(),
+				allBeanFactoryPostProcessorBeanMethodsShouldBeStaticAndHaveNoParameters(),
+				noClassesShouldCallStepVerifierStepVerifyComplete(),
+				noClassesShouldConfigureDefaultStepVerifierTimeout(), noClassesShouldCallCollectorsToList(),
+				noClassesShouldCallURLEncoderWithStringEncoding(), noClassesShouldCallURLDecoderWithStringEncoding(),
+				noClassesShouldLoadResourcesUsingResourceUtils());
+		getRuleDescriptions().set(getRules().map((rules) -> rules.stream().map(ArchRule::getDescription).toList()));
 	}
 
 	@TaskAction
 	void checkArchitecture() throws IOException {
 		JavaClasses javaClasses = new ClassFileImporter()
-			.importPaths(this.classes.getFiles().stream().map(File::toPath).collect(Collectors.toList()));
-		List<EvaluationResult> violations = Stream.of(allPackagesShouldBeFreeOfTangles(),
-				allBeanPostProcessorBeanMethodsShouldBeStaticAndHaveParametersThatWillNotCausePrematureInitialization(),
-				allBeanFactoryPostProcessorBeanMethodsShouldBeStaticAndHaveNoParameters())
+			.importPaths(this.classes.getFiles().stream().map(File::toPath).toList());
+		List<EvaluationResult> violations = getRules().get()
+			.stream()
 			.map((rule) -> rule.evaluate(javaClasses))
 			.filter(EvaluationResult::hasViolation)
-			.collect(Collectors.toList());
+			.toList();
 		File outputFile = getOutputDirectory().file("failure-report.txt").get().getAsFile();
 		outputFile.getParentFile().mkdirs();
 		if (!violations.isEmpty()) {
 			StringBuilder report = new StringBuilder();
 			for (EvaluationResult violation : violations) {
-				report.append(violation.getFailureReport().toString());
+				report.append(violation.getFailureReport());
 				report.append(String.format("%n"));
 			}
 			Files.writeString(outputFile.toPath(), report.toString(), StandardOpenOption.CREATE,
@@ -162,6 +181,53 @@ public abstract class ArchitectureCheck extends DefaultTask {
 		};
 	}
 
+	private ArchRule noClassesShouldCallStepVerifierStepVerifyComplete() {
+		return ArchRuleDefinition.noClasses()
+			.should()
+			.callMethod("reactor.test.StepVerifier$Step", "verifyComplete")
+			.because("it can block indefinitely and expectComplete().verify(Duration) should be used instead");
+	}
+
+	private ArchRule noClassesShouldConfigureDefaultStepVerifierTimeout() {
+		return ArchRuleDefinition.noClasses()
+			.should()
+			.callMethod("reactor.test.StepVerifier", "setDefaultTimeout", "java.time.Duration")
+			.because("expectComplete().verify(Duration) should be used instead");
+	}
+
+	private ArchRule noClassesShouldCallCollectorsToList() {
+		return ArchRuleDefinition.noClasses()
+			.should()
+			.callMethod(Collectors.class, "toList")
+			.because("java.util.stream.Stream.toList() should be used instead");
+	}
+
+	private ArchRule noClassesShouldCallURLEncoderWithStringEncoding() {
+		return ArchRuleDefinition.noClasses()
+			.should()
+			.callMethod(URLEncoder.class, "encode", String.class, String.class)
+			.because("java.net.URLEncoder.encode(String s, Charset charset) should be used instead");
+	}
+
+	private ArchRule noClassesShouldCallURLDecoderWithStringEncoding() {
+		return ArchRuleDefinition.noClasses()
+			.should()
+			.callMethod(URLDecoder.class, "decode", String.class, String.class)
+			.because("java.net.URLDecoder.decode(String s, Charset charset) should be used instead");
+	}
+
+	private ArchRule noClassesShouldLoadResourcesUsingResourceUtils() {
+		return ArchRuleDefinition.noClasses()
+			.should()
+			.callMethodWhere(JavaCall.Predicates.target(With.owner(Predicates.type(ResourceUtils.class)))
+				.and(JavaCall.Predicates.target(HasName.Predicates.name("getURL")))
+				.and(JavaCall.Predicates.target(HasParameterTypes.Predicates.rawParameterTypes(String.class)))
+				.or(JavaCall.Predicates.target(With.owner(Predicates.type(ResourceUtils.class)))
+					.and(JavaCall.Predicates.target(HasName.Predicates.name("getFile")))
+					.and(JavaCall.Predicates.target(HasParameterTypes.Predicates.rawParameterTypes(String.class)))))
+			.because("org.springframework.boot.io.ApplicationResourceLoader should be used instead");
+	}
+
 	public void setClasses(FileCollection classes) {
 		this.classes = classes;
 	}
@@ -179,7 +245,20 @@ public abstract class ArchitectureCheck extends DefaultTask {
 		return this.classes.getAsFileTree();
 	}
 
+	@Optional
+	@InputFiles
+	@PathSensitive(PathSensitivity.RELATIVE)
+	public abstract DirectoryProperty getResourcesDirectory();
+
 	@OutputDirectory
 	public abstract DirectoryProperty getOutputDirectory();
+
+	@Internal
+	public abstract ListProperty<ArchRule> getRules();
+
+	@Input
+	// The rules themselves can't be an input as they aren't serializable so we use their
+	// descriptions instead
+	abstract ListProperty<String> getRuleDescriptions();
 
 }
